syntax = "proto3";

package comments;

option go_package = "pb/generated";

service Comment {
    rpc AddComment (AddCommentRequest) returns (AddedComment) {}
    rpc OnCommentAdded (OnCommentAddedRequest) returns (stream AddedComment) {}
}

message AddCommentRequest {
    string showId = 1;
    string userId = 2;
    string text = 3;
}

message AddedComment {
    string id = 1;
    string showId = 2;
    string userId = 3;
    string text = 4;
}

message OnCommentAddedRequest {
    string showId = 1;
}

